--- a/Plan/fabric/build.gradle
+++ b/Plan/fabric/build.gradle
@@ -8,23 +8,22 @@ dependencies {
 
     shadow "net.playeranalytics:platform-abstraction-layer-api:$palVersion"
 
-    minecraft "com.mojang:minecraft:1.20.2"
-    mappings "net.fabricmc:yarn:1.20.2+build.1:v2"
-    modImplementation "net.fabricmc:fabric-loader:0.14.22"
+    minecraft "com.mojang:minecraft:1.18.2"
+    mappings "net.fabricmc:yarn:1.18.2+build.4"
+    modImplementation "net.fabricmc:fabric-loader:0.15.2"
     modImplementation('me.lucko:fabric-permissions-api:0.3-SNAPSHOT')
 
     // Fabric API
     Set<String> apiModules = [
             'fabric-api-base',
-            'fabric-command-api-v2',
+            'fabric-command-api-v1',
             'fabric-entity-events-v1',
             'fabric-lifecycle-events-v1',
             'fabric-networking-api-v1',
-            'fabric-message-api-v1'
     ]
 
     apiModules.forEach {
-        modImplementation(fabricApi.module(it, "0.89.1+1.20.2"))
+        modImplementation(fabricApi.module(it, "0.77.0+1.18.2"))
     }
 
     testImplementation project(path: ":common", configuration: 'testArtifacts')
