--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 
 name: CI
 
-on: [push, pull_request]
+on: [push]
 
 jobs:
   test:
@@ -53,72 +53,8 @@ jobs:
           echo "snapshotVersion=$(cat build/versions/snapshot.txt)" >> $GITHUB_ENV
           echo "versionString=$(cat build/versions/jar.txt)" >> $GITHUB_ENV
           echo "artifactPath=$(pwd)/builds" >> $GITHUB_ENV
-      - name: 📤 Upload Plan.jar 
-        uses: actions/upload-artifact@v3
-        with:
-          name: Plan-${{ env.versionString }}-${{ env.git_hash }}.jar
-          path: ${{ env.artifactPath }}/Plan-${{ env.snapshotVersion }}.jar
       - name: 📤 Upload PlanFabric.jar 
         uses: actions/upload-artifact@v3
         with:
           name: PlanFabric-${{ env.versionString }}-${{ env.git_hash }}.jar
           path: ${{ env.artifactPath }}/PlanFabric-${{ env.snapshotVersion }}.jar
-      - name: 🚦 Setup Selenium Webdriver
-        uses: nanasess/setup-chromedriver@v2
-      - name: 🚦 Setup Selenium Webdriver settings
-        run: |
-          export DISPLAY=:99
-          chromedriver --url-base=/wd/hub &
-          sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 &
-      - name: 📶 Verify MariaDB connection 
-        env:
-          PORT: ${{ job.services.mariadb.ports[3306] }}
-        run: |
-          while ! mysqladmin ping -h"127.0.0.1" -P"$PORT" --silent; do
-            sleep 1
-          done
-      - name: 🩺 Test 
-        env:
-          MYSQL_DB: test
-          MYSQL_USER: user
-          MYSQL_PASS: password
-          MYSQL_PORT: ${{ job.services.mariadb.ports[3306] }}
-          CHROMEDRIVER: /usr/local/bin/chromedriver
-        run: |
-          cd Plan
-          ./gradlew build
-      - name: 🖨 Build Javadocs
-        run: |
-          cd Plan
-          echo "Building javadocs with gradle"
-          ./gradlew aggregateJavadocs
-          echo "Moving to working directory:"
-          cd ../
-          mkdir javadocs
-          mkdir javadocs/all
-          mkdir javadocs/api
-          cp -r Plan/build/docs/javadoc/* javadocs/all/
-          cp -r Plan/api/build/docs/javadoc/* javadocs/api/
-          cp scripts/index.html javadocs/index.html
-          cd javadocs
-          touch .nojekyll
-      - name: 📤 Deploy Javadocs 
-        if: github.ref == 'refs/heads/master'
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          branch: gh-pages # The branch the action should deploy to.
-          folder: javadocs # The folder the action should deploy.
-      - name: 🩺 SonarCloud - Java
-        if: "${{ env.SONAR_TOKEN != '' }}"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: |
-          cd Plan
-          ./gradlew sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=player-analytics-plan
-      - name: 🩺 SonarCloud - React
-        if: "${{ env.SONAR_TOKEN != '' }}"
-        uses: SonarSource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
